# storyboard-ai

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/superpowers/specs/: 2026-07-04-voice-image-narration-improvements-design.md
pipeline/: .env.example  config.py  pipeline.py  webapp.py
pipeline/output/: README.md
pipeline/static/: index.html
pipeline/test_scripts/: test_all_tools.py  test_quick.py  test_veo_pipeline_offline.py
pipeline/tools/: __init__.py  concatenate_videos.py  director.py  divider.py  draw_animation.py  image_gen.py  image_prompt_tool.py  merge_audio_video.py  narration_refiner.py  reference_search.py  research.py  segmentation.py  subtitle.py  transcribe_audio.py  tts.py  utils.py  video_gen.py  video_subtitle.py  zoom_out_ending.py
pipeline/tools/puter/: bridge.html  puter_gen.mjs  puter_headless.py
sam3-hosting/: Dockerfile  README.md  requirements.txt  testing_sam3.ipynb
sam3-hosting/sam3/: sam3-explore.ipynb  server.py
searxng/: settings.yml
