[project]
name = "storyboard-ai"
version = "0.1.0"
description = "Turn a topic into a narrated whiteboard-animation video"
authors = [{ name = "Mohammed Sarim", email = "msarim9662@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.4",
    "fastapi>=0.139.0",
    "faster-whisper>=1.2.1",
    "google-genai>=2.10.0",
    "huggingface-hub>=1.22.0",
    "kokoro>=0.9.4",
    "numpy>=2.4.6",
    "openai>=2.44.0",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "soundfile>=0.14.0",
    "uvicorn[standard]>=0.49.0",
]
